eval sub comment

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,6 +16,7 @@
   </div>
 </div>
 <div class="content" style="margin-top: 20px;">
+  <%= link_to "follow", follow_article_path, class: 'link' %>
   <%= raw @article.content %>
 </div>
 <hr>
