--- a/app/assets/stylesheets/votes.css.less
+++ b/app/assets/stylesheets/votes.css.less
@@ -1,3 +1,9 @@
 // Place all the styles related to the votes controller here.
 // They will automatically be included in application.css.
 // You can use Less here: http://lesscss.org/
+
+.vote-table {
+  td {
+    padding: 5px 10px;
+  }
+}
