--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,12 @@
+<% if params[:raw] %>
+<div style="padding: 30px 50px; width: 500px;">
+<%= link_to "< 返回", params[:from]=="index" ? articles_path : user_publishes_path , class: "link" ,remote: true %>
+<legend style="color: white;"><%= @article.title %></legend>
+<% else %>
 <h1>
   <%= @article.title %>
 </h1>
+<% end -%>
 
 <div class="author">
   作者：<%= link_to @article.author.nickname, @article.author, class: "link" %>
@@ -16,10 +22,13 @@
   </div>
 </div>
 <div class="content" style="margin-top: 20px;">
-  <%= link_to "follow", follow_article_path, class: 'link' %>
   <%= raw @article.content %>
 </div>
+<% if params[:raw] %>
+</div>
+<% else %>
 <hr>
+<%= link_to "follow", follow_article_path, class: 'link' %>
 <%= render partial: 'comments/comments', object: @article, as: :commentable %>
 <br>
 <br>
@@ -27,3 +36,5 @@
 <br>
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
+
+<% end -%>
