--- a/app/views/users/publishes.html.erb
+++ b/app/views/users/publishes.html.erb
@@ -1,14 +1,15 @@
-<div style="padding: 50px; width: 500px;">
+<div style="padding: 50px; width: 400px;">
 <% flash.each do |k,v| %>
   <div class="alert alert-<%= k %>">
     <%= v %>
   </div>
 <% end -%>
-<legend style="color: white;">待审核文章</legend>
+<legend style="color: white;">
+  <a href="<%= new_article_path %>" class="btn btn-danger pull-right" style="margin-top: 5px;">发布新文章</a>
+  我的文章
 
-<% if @articles.empty? %>
-暂无未审核文章
-<% else %>
+</legend>
+
 <table class="table table-bordered">
   <tr>
     <th class="w30">目录</th>
@@ -18,13 +19,14 @@
   <% @articles.each do |article| %>
     <tr>
       <td><%= article.category.name %></td>
-      <td><%= link_to article.title, article_path(article, from: "index"), class: "link", remote: true %></td>
-      <td class="w30"><%= link_to '通过', verify_article_path(article), class: "link", remote: true %></td>
+      <td><%= link_to article.title, article_path(article), class: "link", remote: true %></td>
+      <% if article.is_verified? and !current_user.is_admin? %>
+      <td colspan="2">已发布</td>
+      <% else %>
       <td class="w30"><%= link_to '编辑', edit_article_path(article), class: "link" %></td>
       <td class="w30"><%= link_to '删除', destroy_article_path(article), remote: true, data: { confirm: 'Are you sure?' }, class: "link" %></td>
+      <% end -%>
     </tr>
   <% end %>
 </table>
-
-<% end -%>
 </div>
