--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -179,6 +179,8 @@ html, body {
   right: 90px;
   top: 10px;
   border-radius: 2px;
+  width: 185px;
+
   &:after {
     content: "";
     display: block;
