--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
             <%= beautify_time_with_br(feed.created_at) %>
           </td>
           <td class="content">
-            <%= feed.content %>
+            <%= raw feed.content %>
            <!--  关注了
             <a href="###" class="link">调查</a> 中的文章
             <a href="###" class="timeline-link">《听听纽带的声音》</a> -->
