--- a/app/views/layouts/_user.html.erb
+++ b/app/views/layouts/_user.html.erb
@@ -30,8 +30,14 @@
       </div>
       <div class="center gray"><%= current_user.is_who %></div>
       <a id="right-bar-link-1" href="/" class="center gray mt30"><i class="icon-home icon-2x p0"></i><br>主页</a>
-      <a id="right-bar-link-2" href="<%= current_user.is_reporter? ? user_publishes_path : new_article_path %>" class="center gray mt30"><i class="icon-edit icon-2x p0"></i><br>发布</a>
+      <% if current_user.is_reporter? %>
+      <a id="right-bar-link-2" href="<%= current_user.articles.empty? ? new_article_path : user_publishes_path %>" class="center gray mt30"><i class="icon-edit icon-2x p0"></i><br>发布</a>
+      <% else %>
+      <a id="right-bar-link-2" href="<%= new_article_path %>" class="center gray mt30"><i class="icon-edit icon-2x p0"></i><br>投稿</a>
+      <% end -%>
+      <% if current_user.is_admin? %>
       <a id="right-bar-link-3" href="<%= articles_path %>" class="center gray mt30"><i class="icon-eye-open icon-2x p0"></i><br>审核</a>
+      <% end -%>
       <a id="right-bar-link-4" href="<%= user_edit_path %>" class="center gray mt30"><i class="icon-cog icon-2x p0"></i><br>资料</a>
       <a id="right-bar-link-5" href="<%= logout_path %>" class="center gray mt30" data-no-turbolink><i class="icon-signout icon-2x p0"></i><br>注销</a>
     </div>
