--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -40,7 +40,7 @@ html, body {
   height: 100%;
   width: 100%;
   z-index: 0;
-  background-image: url(/assets/background_image.png);
+  background-image: url(/assets/background_image.jpg);
   .background-size(cover);
 }
 
@@ -119,6 +119,8 @@ html, body {
 #main {
   margin: 40px 60px 40px 180px;
   min-height: 500px;
+  position: relative;
+  .clearfix;
 }
 .avatar {
   display: block;
