--- a/app/assets/stylesheets/bootstrap/type.less
+++ b/app/assets/stylesheets/bootstrap/type.less
@@ -173,8 +173,8 @@ dd {
 hr {
   margin: @baseLineHeight 0;
   border: 0;
-  border-top: 1px solid @hrBorder;
-  border-bottom: 1px solid @white;
+  border-top: 1px solid #DDD;
+  border-bottom: 1px solid #FFF;
 }
 
 // Abbreviations and acronyms
