--- a/app/assets/stylesheets/bootstrap/utilities.less
+++ b/app/assets/stylesheets/bootstrap/utilities.less
@@ -110,6 +110,9 @@
 a.gray:hover {
   color: #FFF;
 }
+.black               { color: #333; }
+a.black:hover,
+a.black:focus        { color: #000; }
 .bold {
   font-weight: bold;
 }
