--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -117,9 +117,12 @@ html, body {
   }
 }
 #main {
-  margin: 40px 60px 40px 180px;
+  margin: 40px 50px 40px 190px;
   min-height: 500px;
   position: relative;
+  img {
+    max-width: 610px;
+  }
   .clearfix;
 }
 .avatar {
