--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,5 @@
-<% @category.articles.each do |article| %>
+<div class="clearfix" style="margin-left: -15px; position: relative;">
+<% @category.articles.recent.each do |article| %>
   <div class="verl"></div>
   <div class="category-block">
     <h3 class="m0"><%= link_to article.title, article %></h3>
@@ -15,3 +16,4 @@
     </div>
   </div>
 <% end -%>
+</div>
