--- a/app/views/features/show.html.erb
+++ b/app/views/features/show.html.erb
@@ -1,15 +1,35 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Title:</b>
-  <%= @feature.title %>
-</p>
-
-<p>
-  <b>Content:</b>
+<div style="position: relative;">
+  <%= image_tag @feature.poster, width: "610" %>
+  <div style="position: absolute; background-color: rgba(0,0,0,0.75); color: white; width: 100%; bottom: 5px;">
+    <h1 class="ml20">
+      <%= @feature.title %>
+    </h1>
+    <div style="position: absolute; right: 10px; bottom: 10px">
+      <%= beautify_time @feature.created_at %>
+    </div>
+  </div>
+</div>
+<div style="color: #666; margin: 10px;">
   <%= @feature.content %>
-</p>
+</div>
 
-
-<%= link_to 'Edit', edit_feature_path(@feature) %> |
-<%= link_to 'Back', features_path %>
+<hr class="clearboth" style="border-top-color: #DDD;">
+<div class="clearfix" style="position: relative; margin-left: -15px;">
+<% @feature.articles.recent.each do |article| %>
+  <div class="verl"></div>
+  <div class="category-block">
+    <h3 class="m0"><%= link_to article.title, article %></h3>
+    <p class="muted">
+      作者：<%= link_to article.author.nickname, article.author, class: "muted" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em><%= short_time(article.created_at) %> </em>
+    </p>
+    <p>
+      <%= article.digest(100) %>
+    </p>
+    <div class="pull-right">
+      <a href="<%= article_path(article, anchor: 'comments') %>" class="comments">
+        <i class="icon-comment"></i>(<%= article.comments.count %>)
+      </a>
+    </div>
+  </div>
+<% end -%>
+</div>
