--- a/app/assets/stylesheets/votes.css.less
+++ b/app/assets/stylesheets/votes.css.less
@@ -7,3 +7,14 @@
     padding: 6px 10px;
   }
 }
+.vote-block {
+  width: 330px;
+  padding: 20px;
+  border-bottom: 1px solid #DDD;
+  .comments {
+    color: #666;
+    &:hover {
+      color: #333;
+    }
+  }
+}
