--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -31,6 +31,10 @@
   }
 }
 
+.btn i {
+  cursor: default;
+}
+
 html, body {
   height: 100%;
 }
@@ -56,8 +60,25 @@ html, body {
 #left-nav {
   position: absolute;
   width: 150px;
-  top: 200px;
+  top: 230px;
   z-index: 200;
+  .transition(top .5s ease-out);
+}
+
+#actions {
+  position: absolute;
+  right: -50px;
+  top: 140px;
+  .transition(top .7s ease-out);
+  .btn {
+    font-size: 12px;
+    text-align: center;
+    padding: 30px 6px;
+    i {
+      padding: 0;
+      margin-top: 10px;
+    }
+  }
 }
 .nav-link {
   display: block;
@@ -120,9 +141,6 @@ html, body {
   margin: 40px 50px 40px 190px;
   min-height: 500px;
   position: relative;
-  img {
-    max-width: 610px;
-  }
   .clearfix;
 }
 .avatar {
