--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,27 +8,36 @@
 </h1>
 <% end -%>
 
-<div class="author">
-  作者：<%= link_to @article.author.nickname, @article.author, class: "link" %>
-</div>
 <div class="clearfix">
   <% unless @article.source.blank? %>
     <div class="pull-right">
       <%= link_to @article.source, @article.source, target: '_blank', class: 'link' %>
     </div>
   <% end -%>  
-  <div class="time">
-    <%= short_time @article.created_at %>
+  <div class="time" style="color: #999;">
+    <%= link_to @article.author.nickname, @article.author, class: "muted" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= short_time @article.created_at %>
   </div>
 </div>
-<div class="content" style="margin-top: 20px;">
+<div class="article-content" style="margin: 20px 0 50px;">
   <%= raw @article.content %>
 </div>
 <% if params[:raw] %>
 </div>
 <% else %>
-<hr>
-<%= link_to "follow", follow_article_path, class: 'link' %>
 
 <%= render partial: 'comments/comments', object: @article, as: :commentable %>
+
+<div id="actions">
+  <div class="btn-group btn-group-vertical">
+    <% if @article.starrers.include? current_user %>
+    <%= link_to unfollow_article_path, class: 'btn disabled' do %>取消<br><i class="icon-ok icon-2x"></i><% end -%>
+    <% else %>
+    <%= link_to follow_article_path, class: 'btn' do %>关注<br><i class="icon-plus-sign icon-2x"></i><% end -%>
+    <% end -%>
+    <% if current_user.is_admin? %>
+    <%= link_to edit_article_path, class: 'btn' do %>修改<br><i class="icon-edit icon-2x"></i><% end -%>
+    <%= link_to destroy_article_path, class: 'btn', html: { confirm: "你确定要删除吗？"} do %>删除<br><i class="icon-trash icon-2x"></i><% end -%>
+    <% end -%>
+  </div>
+</div>
 <% end -%>
