--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -70,18 +70,18 @@
               阅读
             </h4></a>
     </div>
-    <div class="home-block mt10 ml20" style="width: 250px;">
+    <div class="home-block mt10 ml20" style="width: 270px;">
       <div style="padding: 25px;">
-        <div style="font-size: 18px; line-height: 24px; margin-bottom: 5px;"><%= @vote.title %></div>
+        <div style="font-size: 18px; line-height: 24px; margin-bottom: 5px;"><%= link_to @vote.title, @vote %></div>
         <%= form_tag vote_options_path(@vote), method: :post do %>
-          <div class="mb20" style="max-height: 130px; overflow-y: auto;">
+          <div class="mb20" style="max-height: 140px; overflow-y: auto;">
             <% @vote.options.each do |opt| %>
               <div class="mt10">
                 <%= radio_button_tag "option", opt.id %> <%= label_tag "option_" + opt.id, opt.content , class: "vote" %>
               </div>
             <% end -%>
           </div>
-          <%= link_to "查看结果", @vote, class: "btn btn-success" %>
+          <%= link_to "所有投票", votes_path, class: "btn btn-success" %>
           <%= submit_tag "投票", class: "btn btn-danger" %>
         <% end %>
       </div>
