--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -1,20 +1,32 @@
-<h1>Listing votes</h1>
+<div class="clearfix" style="margin-left: -15px; position: relative;">
+<div class="verl" style="left: 380px;"></div>
+<div style="width: 220px; float: right;">
+  <% @votes.hottest[0..8].each do |vote| %>
+  <div class="mb10">
+    <% data = vote.options.map{|a|a.count}.each_with_index.max %>
+    <% break if data[0] == 0 %>
+    <span style="font: 28px 'Times New Roman'; font-style: italic; " class="text-error"><%= data[0] * 100.0 / vote.voters.count %>%</span>
+    的人在 <%= link_to vote.title, vote %> 中选择了 <%= vote.options[data[1]].content %>
+  </div>
+  <% end -%>
+</div>
 
-<table class="table table-bordered table-hover">
-  <tr>
-    <th>Title</th>
-    <th colspan="2">Action</th>
-  </tr>
+<% @votes.recent.each do |vote| %>
+  <div class="vote-block">
+  <h3 class="m0"><%= link_to vote.title, vote %></h3>
+  <%= form_tag vote_options_path(vote), method: :post do %>
+    <div class="mb20">
+      <% vote.options.each do |opt| %>
+        <div class="mt10">
+          <%= radio_button_tag "option", opt.id %> <%= label_tag "option_" + opt.id, opt.content , class: "vote" %>
+        </div>
+      <% end -%>
+    </div>
+    <%= link_to "查看结果", vote, class: "btn btn-success" %>
+    <%= submit_tag "投票", class: "btn btn-danger" %>
+  <% end %>
+</div>
+<% end -%>
 
-<% @votes.each do |vote| %>
-  <tr>
-    <td><%= link_to vote.title, vote, class: "link" %></td>
-    <td class="w30"><%= link_to 'Edit', edit_vote_path(vote), class: "link" %></td>
-    <td class="w30"><%= link_to 'Destroy', vote, method: :delete, data: { confirm: 'Are you sure?' }, class: "link" %></td>
-  </tr>
-<% end %>
-</table>
 
-<br />
-
-<%= link_to 'New Vote', new_vote_path %>
+</div>
