--- a/app/views/votes/_form.html.erb
+++ b/app/views/votes/_form.html.erb
@@ -17,6 +17,9 @@
     <%= f.text_field :title %>
   </div>
   <legend>options</legend>
+  <%= f.fields_for :options do |option| %>
+    <%= render 'option_fields', f: option %>
+  <% end %>
   <%= link_to_add_fields "Add Answer", f, :options %>
 
   <div class="actions">
