--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="home-container">
-    <div class="logo"></div>
+    <a href="#"><div class="logo">back</div></a>
     <div class="home-block" style="width: 845px; border-right: 5px solid #39A7DE;">
       <img src="" width="610" height="260" alt="" class="bgw pull-left">
       <div class="text-block" style="margin-left: 610px;">
