--- a/app/views/users/publishes.html.erb
+++ b/app/views/users/publishes.html.erb
@@ -16,7 +16,7 @@
     <th>标题</th>
     <th colspan="2">动作</th>
   </tr>
-  <% @articles.each do |article| %>
+  <% current_user.articles.each do |article| %>
     <tr>
       <td><%= article.category.name %></td>
       <% if article.is_verified? %>
