--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -12,7 +12,9 @@
 <% commentable.comments.each do |comment| %>
 <div class="comment-block" id="<%= comment.id %>">
 <div class="avatar pull-left">
-  <%= image_tag((comment.commenter ? comment.commenter.avatar : asset_path("avatar_default.jpg")), class: "avatar-inner") %>
+  <%= link_to user_path(comment.commenter) do %>
+    <%= image_tag((comment.commenter ? comment.commenter.avatar : asset_path("avatar_default.jpg")), class: "avatar-inner") %>
+  <% end %>
 </div>
 <div class="controls ml100 tri">
   <% if comment.commenter %>
@@ -33,7 +35,9 @@
   <div class="comment-block" id="<%= subcomment.id %>">
     <div class="ml100">
       <div class="avatar pull-left">
+        <%= link_to user_path(subcomment.commenter) do %>
         <%= image_tag((subcomment.commenter ? subcomment.commenter.avatar : asset_path("avatar_default.jpg")), class: "avatar-inner") %>
+        <% end %>
       </div>
       <div class="controls ml100 tri">
         <% if subcomment.commenter %>
