--- a/app/views/features/show.html.erb
+++ b/app/views/features/show.html.erb
@@ -36,7 +36,7 @@
 
 <div id="actions">
   <div class="btn-group btn-group-vertical">
-    <% if current_user.is_admin? %>
+    <% if is_admin? %>
     <%= link_to edit_feature_path(@feature), class: 'btn' do %>修改<br><i class="icon-edit icon-2x"></i><% end -%>
     <% end -%>
   </div>
