--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,13 +1,10 @@
 <%= form_for @article, html: { class: "form-horizontal" } do |f| %>
   <% if @article.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
-
-      <ul>
+    <div class="alert alert-error">
+      <div>发生了<%= @article.errors.count %>个错误。</div>
       <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <div><%= msg %></div>
       <% end %>
-      </ul>
     </div>
   <% end %>
 
@@ -21,6 +18,12 @@
     <%= f.label :category_id, class: "control-label" %>
     <div class="controls">
     <%= f.select :category_id, options_for_select(Category.all.map{|c|[c.name,c.id.to_s]}, @article.category_id), :prompt => '选择分类' %>
+    </div>
+  </div>
+  <div class="control-group mt20">
+    <%= f.label :source, class: "control-label" %>
+    <div class="controls">
+    <%= f.text_field :source, placeholder: "可以留空" %>
     </div>
   </div>
   <div class="controls">
