--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -1,13 +1,10 @@
 <%= form_for(@feature) do |f| %>
   <% if @feature.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@feature.errors.count, "error") %> prohibited this feature from being saved:</h2>
-
-      <ul>
+    <div class="alert alert-error">
+      <div>发生了<%= @feature.errors.count %>个错误。</div>
       <% @feature.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <div><%= msg %></div>
       <% end %>
-      </ul>
     </div>
   <% end %>
 
