--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="home-container">
     <div class="logo"></div>
     <div class="home-block" style="width: 845px; border-right: 5px solid #39A7DE;">
-      <img src="" width="610" height="260" alt="" class="bgw pull-left">
+      <%= image_tag @feature.poster, width: 610, height: 260, class: "bgw pull-left" %>
       <div class="text-block" style="margin-left: 610px;">
         <h2><a href="<%= features_path %>"><%= @feature.title %></a></h2>
         <p><%= @feature.content %></p>
@@ -20,7 +20,7 @@
       <% end %>
     </div>
     <div class="home-block mt10" style="width: 490px; border-left: 5px solid #D24542;">
-      <img src="" width="300" height="260" alt="" class="bgw pull-right">
+      <%= image_tag @diaocha.imgs[0], width: 300, height: 260, class: "bgw pull-right" %>
       <div class="text-block" style="margin-right: 300px;">
         <h2><%= link_to @diaocha.title, @diaocha %></h2>
         <p><%= @diaocha.digest(50) %></p>
@@ -47,13 +47,13 @@
             </h4></a>
     </div>
     <div class="home-block mt10" style="width: 300px; border-left: 5px solid #0FA39A;">
-      <img src="" width="300" height="200" alt="" class="bgw pull-right">
+      <%= image_tag @renwu.imgs[0], width: 300, height: 200, class: "bgw pull-right" %>
       <div style="position: absolute; padding: 15px; background-color: rgba(0,0,0,0.7); bottom: 60px;">
-        <div style="font-size: 18px; line-height: 24px;"><%= link_to @renwu.first.title, @renwu.first, style: "color: white;" %></div>
-        <div style="color: #ccc;"  ><%= @renwu.first.digest(30) %></div>
+        <div style="font-size: 18px; line-height: 24px;"><%= link_to @renwu.title, @renwu, style: "color: white;" %></div>
+        <div style="color: #ccc;"  ><%= @renwu.digest(30) %></div>
       </div>
-      <a href="<%= article_path(@renwu.first, anchor: 'comments') %>" class="comments" style="right: 25px;">
-        <i class="icon-comment"></i>(<%= @renwu.first.comments.count %>)
+      <a href="<%= article_path(@renwu, anchor: 'comments') %>" class="comments" style="right: 25px;">
+        <i class="icon-comment"></i>(<%= @renwu.comments.count %>)
       </a>
       <a href="<%= category_path(4) %>"><h4 class="category" style="left: 15px; color: #0FA39A">
               人物
