--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,14 +2,11 @@
 <legend style="color: white;">编辑个人资料</legend>
 <%= form_for(@user, url: user_update_path, html: { class: "form-horizontal" }, remote: true) do |f| %>
   <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
+    <div class="alert alert-error">
+      <div>发生了<%= @user.errors.count %>个错误。</div>
       <% @user.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+        <div><%= msg %></div>
       <% end %>
-      </ul>
     </div>
   <% end %>
 
